# python-package-templates

./: README.md
pyproject_hatchling_template/: README.md  pyproject.toml
pyproject_hatchling_template/pyproject_hatchling_package/: module.py
pyproject_hatchling_template/pyproject_hatchling_package/nested_package/: nested_module.py
pyproject_setuptools_template/: README.md  pyproject.toml
pyproject_setuptools_template/pyproject_setuptools_package/: main.py
setuptools_template/: README.md  requirements.dev  requirements.in  requirements.txt  setup.py
tests/: run_tests.sh  test_pyproject_hatchling_template.py  test_pyproject_setuptools_template.py  test_setuptools_template.py
